fix: link created products to NF-e import items
